--- a/index.html
+++ b/index.html
@@ -317,12 +317,12 @@
                         <p>Kristen is a Colorado native who grew up climbing 14,000ft. mountains. She
                             also developed a passion for running and swimming, both of which she competed Division I in
                             college. After college Kristen had the privelege of becoming a mother to 4 amazing children.
-                            It was after her pregnancies that Kristen experienced first hand how core dysfunction 
+                            It was after her pregnancies that Kristen experienced firsthand how core dysfunction 
                             can affect anyone; college athelete or not. Desiring to restore her core so that
                             she could remain active, Kristen sought out advice but found it difficult to
-                            receive . After becoming an ACE certified personal trainer Kristen
-                            specialized in core and pelvic floor function in hopes to bring others the answers to
-                            pelvic floor damage prevention and restoration. She desires for others to ultimately
+                            receive specific and practical help. After becoming an ACE certified personal trainer Kristen
+                            specialized in core training in hope to bring others the answers to
+                            core strengthening and restoration. She desires for others to ultimately
                             experience the same freedom she has re-gained.  Kristen's training approach is foundational and
                             functional. She knows how to begin where the client most needs help, and build upon this to 
                             ultimately train clients to their fullest potential. So, whether they are
