--- a/index.html
+++ b/index.html
@@ -90,8 +90,9 @@
             central to strength, balance and control for the entire body.  As women transition through different stages
             of life, correct core function is key to maintaining an active lifestyle.  If you experience <b>back pain</b>,
             <b>leak</b> when you sneeze, have been <b>pregnant</b>, or simply struggle to perform everyday movements,
-            proper core training is critical to restoration.  If you are an <b>athlete</b> seeking to increase power and speed, 
-            or a pregnant woman hoping to maintain strength before and after pregnancy, proper core training is essential.
+            core training is critical to restoration.  If you are an <b>athlete</b> seeking to increase power and speed, 
+            or a pregnant woman hoping to maintain strength before and after pregnancy, you need core training to achieve
+            your goals.
             <br>
             
             <br>
