--- a/index.html
+++ b/index.html
@@ -102,7 +102,8 @@
             goals.  Expect to build strength, endurance, and confidence as we zero in on your body's unique chemistry
             and how it can become as healthy and efficient as possible.  Is <b>weight loss</b> your goal? You will have
             workouts that effectively increase caloric burn through
-            heartrate driven zone-training. <b>Pregant or post-partum?</b> Your workouts will be safe and effective.
+            heartrate driven zone-training. <b>Pregant or post-partum?</b> Your workouts will be safe and effective for 
+            you and baby.
             <b>Over 55?</b> You will have workouts that account for the changes that occur in females with age.
             <b>Young athlete?</b>Your workouts will get you to the next level of power and speed.  
             Achieve your goals! <b>Together we can win!</b>
