--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
             heartrate driven zone-training. <b>Pregant or post-partum?</b> Your workouts will be safe and effective for 
             you and baby.
             <b>Over 55?</b> You will have workouts that account for the changes that occur in females with age.
-            <b>Young athlete?</b>Your workouts will be customized to get you to the next level.  
+            <b>Young athlete?</b>Your workouts will focus on getting you to the next level.  
             Achieve your goals! <b>Together we can win!</b>
             </p>
         </div>
