--- a/index.html
+++ b/index.html
@@ -97,15 +97,15 @@
             
             <br>
             <h1 class="text-center">Ready For Lasting Change?</h1>
-            <p>When you train with Together Won, you are training from the core out.  While workouts include
-            exercises to strengthen the core, they are also customized to meet your fitness needs and
-            goals.  Expect to build strength, endurance, and confidence as we zero in on your body's unique chemistry
-            and how it can become as healthy and efficient as possible.  Is <b>weight loss</b> your goal? You will have
+            <p>When you train with Together Won, you are training from the core out.  Your workouts will be
+            customized to meet your fitness needs and goals.  Expect to build strength, endurance, and confidence 
+            as we zero in on your body's unique chemistry
+            and how it can become as healthy and efficient as possible. <b>Weight loss</b> your goal? You will have
             workouts that effectively increase caloric burn through
-            heartrate driven zone-training. <b>Pregant or post-partum?</b> Your workouts will be safe and effective for 
+            heartrate driven zone-training. <b>Pregant or post-partum?</b> Workouts will be safe and effective for 
             you and baby.
-            <b>Over 55?</b> You will have workouts that account for the changes that occur in females with age.
-            <b>Young athlete?</b>Your workouts will focus on getting you to the next level.  
+            <b>Over 55?</b> Workouts will account for the changes that occur in females with age.
+            <b>Young athlete?</b>Workouts will focus on getting you to the next level.  
             Achieve your goals! <b>Together we can win!</b>
             </p>
         </div>
