--- a/index.html
+++ b/index.html
@@ -105,8 +105,10 @@
             heartrate driven zone-training. <b>Pregant or post-partum?</b> Workouts will be safe and effective for 
             you and baby.
             <b>Over 55?</b> Workouts will account for the changes that occur in females with age.
-            <b>Young athlete?</b>Workouts will focus on getting you to the next level.  
-            Achieve your goals! <b>Together we can win!</b>
+            <b>Young athlete? </b>Workouts will focus on getting you to the next level.  
+            Achieve your goals! 
+            <br>
+            <b><c>Together we can win!</c></b>
             </p>
         </div>
     </div>
