--- a/index.html
+++ b/index.html
@@ -177,12 +177,12 @@
                         <div class="visa-info">
                             <h1>Classes</h1>
                             <b>
-                            <p>TogetherWON is currently working on developing specialized small classes that are
-                                centered around stages in a women's life (i.e. pre-natal, post-natal, peri-menopause,
-                                post-menopause). In these classes you will learn about the physical implications of your
-                                stage as you participate in workouts designed to strengthen your pelvic floor and
-                                overall fitness. Please contact TogetherWON for more information on the classes as they
-                                develop.
+                            <p>TogetherWON is developing classes that are
+                                centered around stages in a women's life. In these classes you will learn about the 
+                                physical implications of your stage as you participate in workouts and receive exercises
+                                to do at home.
+                                Please check back with TogetherWON for more 
+                                information on the classes as they develop.
                             </p>
                             </b>
                             </p>
