--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
             
             <br>
             <h1 class="text-center">Ready For Lasting Change?</h1>
-            <p>When you train with Together Won, you are training from the core out.  Your workouts will be
+            <p>When you train with TogetherWON, you are training from the core out.  Your workouts will be
             customized to meet your fitness needs and goals.  Expect to build strength, endurance, and confidence 
             as we zero in on your body's unique chemistry
             and how it can become as healthy and efficient as possible. <b>Weight loss</b> your goal? You will have
