--- a/index.html
+++ b/index.html
@@ -86,15 +86,17 @@
         <div class="padding">
 
             <h1 class="text-center">Core?</h1>
-            <p>The core is more than the muscles that span the abdomen and back. It contains deep muscles that are
+            <p>Core training is not simply attempting to flatten your stomach, or get the 6-pack you've always
+            wanted. The core contains deep muscles that are
             central to strength, balance and control for the entire body.  As women transition through different stages
             of life, correct core function is key to maintaining an active lifestyle.  Symptoms such as accidental urine
             leakage, toilet urgency, pelvic pain, trouble balancing, and lower back pain are all signs of a compromised
             core.  Many women ignore these problems or assume they just have to live with them.  However, proper core
             training restores critical muscles, reclaiming freedom for women and ensuring their long-term function. 
-            <br>
+            </p>
+            <p>
             If you experience <b>back pain</b>,
-            <b>leak</b> when you sneeze, have been <b>pregnant</b>, or simply struggle to perform everyday movements,
+            <b>accidental leakage</b>, have been <b>pregnant</b>, or simply struggle to perform everyday movements,
             core training is critical to restoration.  If you are an <b>athlete</b> seeking to increase power and speed, 
             or a pregnant woman hoping to maintain strength before and after pregnancy, you need core training to achieve
             your goals.
