--- a/index.html
+++ b/index.html
@@ -86,12 +86,12 @@
         <div class="padding">
 
             <h1 class="text-center">Core?</h1>
-            <p>Core training is <b>not</b> simply an attempt to flatten your stomach, or get a "6-pack". The core contains 
-            deep muscles that are
+            <p>Core training is <b>not</b> simply about flattening your stomach, or trying to get a "6-pack". 
+            The core contains deep muscles that are
             central to strength, balance and control for the entire body.  As women transition through different stages
-            of life, correct core function is key to maintaining an active lifestyle.  Symptoms such as accidental urine
+            of life, correct core function is key to maintaining an active lifestyle.  <b>Symptoms such as accidental urine
             leakage, toilet urgency, pelvic pain, trouble balancing, and lower back pain are all signs of a compromised
-            core.  Many women ignore these problems or assume they are just a normal progression in life.  Good news!
+            core</b>.  Many women ignore these problems or assume they are just a normal progressions in life.  Good news!
             Proper core training restores critical muscles, reclaiming freedom for women and ensuring their long-term function. 
             </p>
             <p>
