--- a/index.html
+++ b/index.html
@@ -361,20 +361,16 @@
             <p>Submit the following form for all inquiries or to schedule a FREE consultation. 
             </p>
         </div>
-    </div>
     <form id="contact-form" name="contact-form" method="post" action="#">
         <div class="row">
             <div class="form-group col-sm-4">
                 <input type="text" name="name" class="form-control" required="required" placeholder="Your Name">
             </div>
             <div class="form-group col-sm-4">
-                <input type="email" name="email" class="form-control" required="required" placeholder="Your Email">
+                <input type="email" name="email" class="form-control" placeholder="Your Email">
             </div>
             <div class="form-group col-sm-4">
-                <input type="email" name="email" class="form-control" required="required" placeholder="Your Phone #">
-            </div>
-            <div class="form-group col-sm-4">
-                <input type="text" name="subject" class="form-control" placeholder="Subject">
+                <input type="text" name="email" class="form-control" placeholder="Your Phone #">
             </div>
             <div class="form-group col-sm-12">
                 <textarea name="message" id="message" required="required" class="form-control" rows="8"
@@ -385,6 +381,7 @@
             <button type="submit" class="btn btn-primary">Submit</button>
         </div>
     </form>
+    </div>
     <div id="footer-bottom">
         <div class="container text-center">
             <p>© Copyright 2016 <a href="#">TogetherWon</a>. All Rights Reserved.</p>
