--- a/index.html
+++ b/index.html
@@ -361,7 +361,7 @@
             <p>Submit the following form for all inquiries or to schedule a FREE consultation. 
             </p>
         </div>
-    <form id="contact-form" name="contact-form" method="post" action="#">
+    <form id="contact-form" name="contact-form" action="javascript:void(0);">
         <div class="row">
             <div class="form-group col-sm-4">
                 <input type="text" name="name" class="form-control" required="required" placeholder="Your Name">
@@ -370,7 +370,7 @@
                 <input type="email" name="email" class="form-control" placeholder="Your Email">
             </div>
             <div class="form-group col-sm-4">
-                <input type="text" name="email" class="form-control" placeholder="Your Phone #">
+                <input type="text" name="phone" class="form-control" placeholder="Your Phone #">
             </div>
             <div class="form-group col-sm-12">
                 <textarea name="message" id="message" required="required" class="form-control" rows="8"
