--- a/index.html
+++ b/index.html
@@ -69,8 +69,8 @@
                     
                     <h1 id="win-title">We Are <span>Women</span> <br>who <span>Win</span></h1>
                     
-                    <h3><b>In-home personal training beginning with <b>core</b> strengthening, so you can
-                    achieve your fitness goals, and live life to the fullest!</b></h3>
+                    <h3><b><caps></caps>In-home personal training beginning with <b>core</b> strengthening, so you can
+                    achieve your fitness goals, and live life to the fullest!</caps></b></h3>
                     <a href="#about" class="btn btn-primary">Learn More</a>
 
                 </div>
