--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                     
                     <h1 id="win-title">We Are <span>Women</span> <br>who <span>Win</span></h1>
                     
-                    <h3><b><caps></caps>Ready to achieve your fitness goals
+                    <h3><b><caps>Ready to achieve your fitness goals
                     and live life to the fullest? Learn how in-home personal training that begins with core strengthening 
                     can get you there.</caps></b></h3>
                     <a href="#about" class="btn btn-primary">Learn More</a>
