--- a/index.html
+++ b/index.html
@@ -69,9 +69,11 @@
                     
                     <h1 id="win-title">We Are <span>Women</span> <br>who <span>Win</span></h1>
                     
-                    <h3><b><caps>Ready to achieve your fitness goals
+                    <h3><b>READY TO ACHIEVE YOUR FITNEES GOALS AND LIVE LIFE TO THE FULLEST? LEARN HOW IN-HOME PERSONAL 
+                    TRAINING THAT BEGINS WITH CORE STRENGTHENING CAN GET YOU THERE!
+                        Ready to achieve your fitness goals
                     and live life to the fullest? Learn how in-home personal training that begins with core strengthening 
-                    can get you there.</caps></b></h3>
+                    can get you there.</b></h3>
                     <a href="#about" class="btn btn-primary">Learn More</a>
 
                 </div>
