--- a/index.html
+++ b/index.html
@@ -69,10 +69,10 @@
                     
                     <h1 id="win-title">We Are <span>Women</span> <br>who <span>Win</span></h1>
                     
-                    <h3><b>Ready to achieve your fitness goals
+                    <h2><b>Ready to achieve your fitness goals
                     and live life to the fullest? Learn how in-home personal training that begins with core strengthening 
-                    can get you there.
-                    </b></h3>
+                    can get you there!
+                    </b></h2>
                     <a href="#about" class="btn btn-primary">Learn More</a>
 
                 </div>
