--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
         <div class="padding">
             <div class="row section-title">
                 <div class="col-sm-8 col-sm-offset-2">
-                    <h1 class="text-center"><strong>Pricing</strong></h1>
+                    <h1 class="text-center"><strong>Monthly Pricing</strong></h1>
                     <p>Please contact TogetherWON for availability and scheduling, as well as to request a FREE
                         CONSULTATION. Training sessions are offered in the client's home or in the trainer's
                         home gym in North Colorado Springs. Currently "In-Client-Home" training is only available
