--- a/index.html
+++ b/index.html
@@ -291,10 +291,12 @@
                     <div class="carousel-inner">
                         <div class="item active">
                             <img class="img-responsive img-circle" src="images/julie.jpg" alt="Julie Versaw"/>
-                            <p class="text-left"> I’m so excited about my progress. After three months, I have strength
-                                to do things that I never imagined that I could do. Kristen is always prompt and is
-                                always prepared with a workout plan based on my progress and needs and has all the
-                                equipment we need ready and waiting.</p>
+                            <p class="text-left"> I’m so excited about my progress. After three months of working
+                            with Kristen, I have strength to do things that I never imagined that I could do again.
+                            I love working with Kristen. She is creative and encouraging. The workouts that she wrote
+                            specifically for me are varied, use equipment that I have, and are fun to do. I can continue
+                            to gain strength and stamina on my own. I am confident using what I have learned to work
+                            out daily in a variety of ways.</p>
                             <p class="word-author"><span>Julie</span></p>
                         </div>
                         <div class="item">
