--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="description" content="In-home personal training for women in Colorado Springs.">
     <meta name="author" content="Kristen Nielsen">
     <meta name="robots" content="index, follow">
-    <meta property="og:image" content="http://togetherwon.com/images/logo.png" />
+    <meta property="og:image" content="http://togetherwon.com/images/Logo.png" />
     <!--title-->
     <title>Together Won</title>
 
