Add more facebook meta

--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <meta name="description" content="In-home personal training for women in Colorado Springs.">
     <meta name="author" content="Kristen Nielsen">
     <meta name="robots" content="index, follow">
+    <meta property="og:url" content="http://togetherwon.com" />
+    <meta property="og:title" content="Together Won" />
+    <meta property="og:description" content="In-home personal training in Colorado Springs." />
     <meta property="og:image" content="http://togetherwon.com/images/bigLogo.png" />
     <!--title-->
     <title>Together Won</title>
