--- a/index.html
+++ b/index.html
@@ -179,6 +179,7 @@
                             <li>Crowd-free training in your home, in the great outdoors, or in the trainer's home gym</li>
                             <li>Safe, effective workouts that include warm-up, workout, and stretching</li>
                             <li>Assessments and feedback to gauge your progress</li>
+                            <li>Weekly workout plans for the days you are not with the trainer</li>
                             <li>Opportunity to earn rewards for ongoing effort</li>
                             
                             </b>
@@ -256,7 +257,7 @@
                     <div class="col-md-4 col-sm-12 col-xs-12">
                         <div class="plan">
                             <h1>Once a week Buddy Training</h1>
-                            <h2>$112/person</h2>
+                            <h2>$128/person</h2>
                             <p>4 weeks of 1 day/week training with a friend</p>
 
                         </div>
@@ -264,7 +265,7 @@
                     <div class="col-md-4 col-sm-12 col-xs-12">
                         <div class="plan">
                             <h1>Twice a week Buddy Training</h1>
-                            <h2>$208/person</h2>
+                            <h2>$240/person</h2>
                             <p>4 weeks of 2 days/week training with a friend </p>
 
                         </div>
@@ -272,7 +273,7 @@
                     <div class="col-md-4 col-sm-12 col-xs-12">
                         <div class="plan">
                             <h1>3 times a week Buddy Training</h1>
-                            <h2>$288/person</h2>
+                            <h2>$336/person</h2>
                             <p>4 weeks of 3 days/week training with a friend</p>
 
                         </div>
