--- a/index.html
+++ b/index.html
@@ -314,7 +314,14 @@
                             Can’t wait to see where this goes!.</p>
                             <p class="word-author"><span>Sharon</span></p>
                         </div>
-                        
+                        <div class="item">
+                            <img class="img-responsive img-circle" src="images/rachael.jpg" alt="Rachael"/>
+                            <p class="text-left">I’m a sophomore in high school and play varsity tennis. Kristen
+                                identified areas to help me gain strength and agility and then put together a workout
+                                routine just for me. I can already see a difference in my game. Working with Kristen was
+                                great!</p>
+                            <p class="word-author"><span>Rachael</span></p>
+                        </div>
                     </div>
                 </div>
             </div>
