--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
         <div class="padding">
             <div class="row section-title">
                 <div class="col-sm-8 col-sm-offset-2">
-                    <h1 class="text-center"><strong>Monthly Pricing</strong></h1>
+                    <h1 class="text-center"><strong>Pricing</strong></h1>
                     <p>Please contact TogetherWON for availability and scheduling, as well as to request a FREE
                         CONSULTATION. Training sessions are offered in the client's home or in the trainer's
                         home gym in North Colorado Springs. Currently "In-Client-Home" training is only available
@@ -230,6 +230,7 @@
                     <div class="col-md-4 col-sm-12 col-xs-12">
                         <div class="plan">
                             <h1>Once a week training</h1>
+                            <h1>4 Sessions</h1>
                             <h2>$220</h2>
                             <p>4 weeks of 1 day/week training & individualized weekly fitness plans</p>
                             
@@ -239,6 +240,7 @@
                     <div class="col-md-4 col-sm-12 col-xs-12">
                         <div class="plan">
                             <h1>Twice a week training</h1>
+                            <h1>8 Sessions</h1>
                             <h2>$400</h2>
                             <p>4 weeks of 2 days/week training & individualized weekly fitness plans </p>
 
@@ -247,6 +249,7 @@
                     <div class="col-md-4 col-sm-12 col-xs-12">
                         <div class="plan">
                             <h1>3 times a week training</h1>
+                            <h1>12 sessions</h1>
                             <h2>$540</h2>
                             <p>4 weeks of 3 days/week training & individualized weekly fitness plans</p>
 
@@ -258,6 +261,7 @@
                         <div class="plan">
                             <h1>Once a week Buddy Training</h1>
                             <h2>$128/person</h2>
+                            <h1>4 Sessions</h1>
                             <p>4 weeks of 1 day/week training with a friend</p>
 
                         </div>
@@ -266,6 +270,7 @@
                         <div class="plan">
                             <h1>Twice a week Buddy Training</h1>
                             <h2>$240/person</h2>
+                            <h1>8 Sessions</h1>
                             <p>4 weeks of 2 days/week training with a friend </p>
 
                         </div>
@@ -273,6 +278,7 @@
                     <div class="col-md-4 col-sm-12 col-xs-12">
                         <div class="plan">
                             <h1>3 times a week Buddy Training</h1>
+                            <h1>12 Sessions</h1>
                             <h2>$336/person</h2>
                             <p>4 weeks of 3 days/week training with a friend</p>
 
