--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
                     <div class="col-md-4 col-sm-12 col-xs-12">
                         <div class="plan">
                             <h1>Once a week training</h1>
-                            <h1>4 Sessions</h1>
+                            <h2>(4 Sessions)</h2>
                             <h2>$220</h2>
                             <p>4 weeks of 1 day/week training & individualized weekly fitness plans</p>
                             
@@ -240,7 +240,7 @@
                     <div class="col-md-4 col-sm-12 col-xs-12">
                         <div class="plan">
                             <h1>Twice a week training</h1>
-                            <h1>8 Sessions</h1>
+                            <h2>(8 Sessions)</h2>
                             <h2>$400</h2>
                             <p>4 weeks of 2 days/week training & individualized weekly fitness plans </p>
 
@@ -249,7 +249,7 @@
                     <div class="col-md-4 col-sm-12 col-xs-12">
                         <div class="plan">
                             <h1>3 times a week training</h1>
-                            <h1>12 sessions</h1>
+                            <h2>(12 sessions)</h2>
                             <h2>$540</h2>
                             <p>4 weeks of 3 days/week training & individualized weekly fitness plans</p>
 
@@ -260,8 +260,8 @@
                     <div class="col-md-4 col-sm-12 col-xs-12">
                         <div class="plan">
                             <h1>Once a week Buddy Training</h1>
+                            <h2>(4 Sessions)</h2>
                             <h2>$128/person</h2>
-                            <h1>4 Sessions</h1>
                             <p>4 weeks of 1 day/week training with a friend</p>
 
                         </div>
@@ -269,8 +269,8 @@
                     <div class="col-md-4 col-sm-12 col-xs-12">
                         <div class="plan">
                             <h1>Twice a week Buddy Training</h1>
+                            <h2>(8 Sessions)</h2>
                             <h2>$240/person</h2>
-                            <h1>8 Sessions</h1>
                             <p>4 weeks of 2 days/week training with a friend </p>
 
                         </div>
@@ -278,7 +278,7 @@
                     <div class="col-md-4 col-sm-12 col-xs-12">
                         <div class="plan">
                             <h1>3 times a week Buddy Training</h1>
-                            <h1>12 Sessions</h1>
+                            <h2>(12 Sessions)</h2>
                             <h2>$336/person</h2>
                             <p>4 weeks of 3 days/week training with a friend</p>
 
