--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
                     <div class="col-md-4 col-sm-12 col-xs-12">
                         <div class="plan">
                             <h1>3 times a week training</h1>
-                            <h2>(12 sessions)</h2>
+                            <h2>(12 Sessions)</h2>
                             <h2>$540</h2>
                             <p>4 weeks of 3 days/week training & individualized weekly fitness plans</p>
 
