--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
                         home gym in North Colorado Springs. Currently "In-Client-Home" training is only available
                         for residents in Briargate, Northgate and Monument.</p>
                     <p>Each session is 1 hour</p>
-                    <p>Payment is due at the beginning of every month. Only one reschedule allowed each month and
+                    <p>Payment is due at the beginning of every 4-week period. Only two reschedules allowed each month and
                     based on availability</p>
                 </div>
             </div>
