--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@
                             <h1>Once a week Buddy Training</h1>
                             <h2>(4 Sessions)</h2>
                             <h2>$128/person</h2>
-                            <p>4 weeks of 1 day/week training with a friend</p>
+                            <p>4 weeks of 1 day/week training with a friend & weekly fitness plans</p>
 
                         </div>
                     </div>
@@ -271,7 +271,7 @@
                             <h1>Twice a week Buddy Training</h1>
                             <h2>(8 Sessions)</h2>
                             <h2>$240/person</h2>
-                            <p>4 weeks of 2 days/week training with a friend </p>
+                            <p>4 weeks of 2 days/week training with a friend & weekly fitness plans</p>
 
                         </div>
                     </div>
@@ -280,7 +280,7 @@
                             <h1>3 times a week Buddy Training</h1>
                             <h2>(12 Sessions)</h2>
                             <h2>$336/person</h2>
-                            <p>4 weeks of 3 days/week training with a friend</p>
+                            <p>4 weeks of 3 days/week training with a friend & weekly fitness plans</p>
 
                         </div>
                     </div>
