Some structured data

--- a/index.html
+++ b/index.html
@@ -45,7 +45,23 @@
         ga('send', 'pageview');
 
     </script>
-
+    <script type="application/ld+json">
+	{
+  	"@context": "http://schema.org",
+  	"@type": "LocalBusiness",
+  	"address": {
+    "@type": "PostalAddress",
+    "addressLocality": "Colorado Springs",
+    "addressRegion": "CO",
+    "postalCode":"80921"
+  	},
+  	"description": "In-home personal training for women in Colorado Springs.",
+  	"name": "Together Won",
+  	"url": "http://togetherwon.com",
+  	"openingHours": "Upon Appointment",
+  	"sameAs" : [ "https://www.facebook.com/Together-Won-1361236270571452"]
+	}
+</script>
 </head><!--/head-->
 <body>
 <header id="navigation">
